# synft

./: .gitignore  Anchor.toml  Anchor.toml.devnet  CHANGELOG.md  README.md  build_crank.sh  build_crank.sh~  package-lock.json  package.json  start_crank.sh  start_crank.sh~
docs/: api-doc.md
programs/synft/: Cargo.toml
programs/synft/src/: lib.rs
programs/synft/src/instructions/: burn.rs  burn_for_sol.rs  burn_for_sol_v2.rs  burn_for_token.rs  burn_for_token_v2.rs  burn_v2.rs  crank_process_v2.rs  crunk_dirty_v2.rs  extract.rs  extract_sol.rs  extract_sol_v2.rs  extract_v2.rs  initialize_fungible_token_inject.rs  initialize_inject.rs  initialize_sol_inject.rs  inject_sol.rs  inject_sol_v2.rs  inject_to_non_root.rs  inject_to_non_root_v2.rs  inject_to_root.rs  inject_to_root_v2.rs  mod.rs  nft_copy.rs  snowball_nft.rs  transfer_child_nft.rs  transfer_child_nft_v2.rs  transfer_crank_end.rs  transfer_crank_end_v2.rs  transfer_crank_init.rs  transfer_crank_init_v2.rs  transfer_crank_process.rs  transfer_crank_process_v2.rs  transfer_crank_v2.rs
programs/synft/src/state/: errors.rs  metadata.rs  mod.rs
render_scripts/: burn_crank.ts  common.ts  idl.json  main.ts  package-lock.json  package.json  synft.ts  transfer_crank.mjs  transfer_crank.ts
scripts/: README.md  createCollectionNFT.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-5ajYuWCwoJiaTihfSM2i1uzUChjvthd8cU3Ea6gA4cBe.tar.bz2  snapshot-1300-aDgtcij7YALseBryy5UhS14vgYzCmTdpzGLrVhVBQb7.tar.bz2  snapshot-1400-9oimJa5Tn3kPmY3yiCZybPfNd8HzHz2hFihtTVAJqoME.tar.bz2  validator-keypair.json  (+1 more)
(+71 files in other folders)
