[package]
name = "synft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "synft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]

[dependencies]
anchor-lang = "0.22.0"
solana-program = "1.6.12"
anchor-derive-accounts = {version = "0.22.0"}
anchor-spl = {version = "0.22.0"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }